--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <div class="menus">
     <ul id="list">
       <a class="home" href=""><li class="list-el">Home</li></a>
-      <a class="home" href="about/index.html"><li class="list-el">About</li></a>
+      <a class="home" href="about.html"><li class="list-el">About</li></a>
       <li onclick="c()" id="close" class="list-el">Close</li>
     </ul>
   </div>
